--- a/3.Jest_Playwright/playwright/package.json
+++ b/3.Jest_Playwright/playwright/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "jsaqa_3_2",
+  "name": "5577",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "playwright"
-  },
+  "scripts": {},
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.12.3",
-    "playwright": "^1.12.3"
+    "@playwright/test": "^1.29.2",
+    "@types/faker": "^6.6.9",
+    "faker": "^5.5.3"
   }
 }
