5.Puppeteer_Part_2_and_Cucumber

--- a/5.Puppeteer_Part_2_and_Cucumber/package.json
+++ b/5.Puppeteer_Part_2_and_Cucumber/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsaqa_3_3",
+  "name": "5.puppeteer_part_2_and_cucumber",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
