--- a/8.CI_CD_Jenkins/package.json
+++ b/8.CI_CD_Jenkins/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "cypress": "^12.0.2",
     "forever": "^3.0.2",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
@@ -20,8 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "typescript": "^3.2.1",
-    "uuid": "^8.3.1",
-		"cypress": "^12.0.2"
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "server": "forever -w server.js",
@@ -30,10 +30,22 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-		"cy:laptop:headless": "npx cypress run -b chrome -C cypress.config.js",
-    "cy:laptop:headed": "npx cypress run -b edge --headed -C cypress.config.js",
-    "cy:mobile:headless": "npx cypress run -b edge -C cypress.config2.js",
-    "cy:mobile:headed": "npx cypress run -b chrome --headed -C cypress.config2.js"
+    "test:BookingFilm:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/BookingFilm.cy.js'",
+    "test:BookingFilm:edge": "npx cypress run --record --group BookingFilm --browser edge --spec 'cypress/e2e/BookingFilm.cy.js'",
+    "test:BookingFilm:firefox": "npx cypress run --record --group BookingFilm --browser firefox --spec 'cypress/e2e/BookingFilm.cy.js'",
+    "test:HomePageDisplay:chrome": "npx cypress run --record --group HomePageDisplay --browser chrome --spec 'cypress/e2e/HomePageDisplay.cy.js'",
+    "test:HomePageDisplay:edge": "npx cypress run --record --group HomePageDisplay --browser edge --spec 'cypress/e2e/HomePageDisplay.cy.js'",
+    "test:HomePageDisplay:firefox": "npx cypress run --record --group HomePageDisplay --browser firefox --spec 'cypress/e2e/HomePageDisplay.cy.js'",
+    "test:LoginToAdmin:chrome": "npx cypress run --record --group LoginToAdmin --browser chrome --spec 'cypress/e2e/LoginToAdmin.cy.js'",
+    "test:LoginToAdmin:edge": "npx cypress run --record --group LoginToAdmin --browser edge --spec 'cypress/e2e/LoginToAdmin.cy.js'",
+    "test:LoginToAdmin:firefox": "npx cypress run --record --group LoginToAdmin --browser firefox --spec 'cypress/e2e/LoginToAdmin.cy.js'",
+    "test:parallel:chrome": "run-p -c --aggregate-output test:BookingFilm:chrome test:HomePageDisplay:chrome test:LoginToAdmin:chrome",
+    "test:parallel:edge": "run-p -c --aggregate-output test:BookingFilm:edge test:HomePageDisplay:edge test:LoginToAdmin:edge",
+    "test:parallel:firefox": "run-p -c --aggregate-output test:BookingFilm:firefox test:HomePageDisplay:firefox test:LoginToAdmin:firefox",
+    "test:parallel:chrome:firefox": "run-p -c --aggregate-output test:LoginToAdmin:chrome test:HomePageDisplay:firefox",
+    "test:fromFolderBooking:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/Booking/*'",
+    "test:fromFolderLogin:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/Login/*'",
+    "test:fromFolders:chrome": "run-p -c --aggregate-output test:fromFolderLogin:chrome test:fromFolderBooking:chrome"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,17 +64,18 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.1.2",
-		"cypress-file-upload": "^5.0.8"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.2"
   }
 }
