8.CI_CD_Jenkins

--- a/8.CI_CD_Jenkins/package.json
+++ b/8.CI_CD_Jenkins/package.json
@@ -30,22 +30,22 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "test:BookingFilm:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/BookingFilm.cy.js'",
-    "test:BookingFilm:edge": "npx cypress run --record --group BookingFilm --browser edge --spec 'cypress/e2e/BookingFilm.cy.js'",
-    "test:BookingFilm:firefox": "npx cypress run --record --group BookingFilm --browser firefox --spec 'cypress/e2e/BookingFilm.cy.js'",
-    "test:HomePageDisplay:chrome": "npx cypress run --record --group HomePageDisplay --browser chrome --spec 'cypress/e2e/HomePageDisplay.cy.js'",
-    "test:HomePageDisplay:edge": "npx cypress run --record --group HomePageDisplay --browser edge --spec 'cypress/e2e/HomePageDisplay.cy.js'",
-    "test:HomePageDisplay:firefox": "npx cypress run --record --group HomePageDisplay --browser firefox --spec 'cypress/e2e/HomePageDisplay.cy.js'",
-    "test:LoginToAdmin:chrome": "npx cypress run --record --group LoginToAdmin --browser chrome --spec 'cypress/e2e/LoginToAdmin.cy.js'",
-    "test:LoginToAdmin:edge": "npx cypress run --record --group LoginToAdmin --browser edge --spec 'cypress/e2e/LoginToAdmin.cy.js'",
-    "test:LoginToAdmin:firefox": "npx cypress run --record --group LoginToAdmin --browser firefox --spec 'cypress/e2e/LoginToAdmin.cy.js'",
+    "test:BookingFilm:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/Booking/BookingFilm.cy.js'",
+    "test:BookingFilm:edge": "npx cypress run --record --group BookingFilm --browser edge --spec 'cypress/e2e/Booking/BookingFilm.cy.js'",
+    "test:BookingFilm:firefox": "npx cypress run --record --group BookingFilm --browser firefox --spec 'cypress/e2e/Booking/BookingFilm.cy.js'",
+    "test:HomePageDisplay:chrome": "npx cypress run --record --group HomePageDisplay --browser chrome --spec 'cypress/e2e/Booking/HomePageDisplay.cy.js'",
+    "test:HomePageDisplay:edge": "npx cypress run --record --group HomePageDisplay --browser edge --spec 'cypress/e2e/Booking/HomePageDisplay.cy.js'",
+    "test:HomePageDisplay:firefox": "npx cypress run --record --group HomePageDisplay --browser firefox --spec 'cypress/e2e/Booking/HomePageDisplay.cy.js'",
+    "test:LoginToAdmin:chrome": "npx cypress run --record --group LoginToAdmin --browser chrome --spec 'cypress/e2e/Login/LoginToAdmin.cy.js'",
+    "test:LoginToAdmin:edge": "npx cypress run --record --group LoginToAdmin --browser edge --spec 'cypress/e2e/Login/LoginToAdmin.cy.js'",
+    "test:LoginToAdmin:firefox": "npx cypress run --record --group LoginToAdmin --browser firefox --spec 'cypress/e2e/Login/LoginToAdmin.cy.js'",
     "test:parallel:chrome": "run-p -c --aggregate-output test:BookingFilm:chrome test:HomePageDisplay:chrome test:LoginToAdmin:chrome",
     "test:parallel:edge": "run-p -c --aggregate-output test:BookingFilm:edge test:HomePageDisplay:edge test:LoginToAdmin:edge",
     "test:parallel:firefox": "run-p -c --aggregate-output test:BookingFilm:firefox test:HomePageDisplay:firefox test:LoginToAdmin:firefox",
     "test:parallel:chrome:firefox": "run-p -c --aggregate-output test:LoginToAdmin:chrome test:HomePageDisplay:firefox",
     "test:fromFolderBooking:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/Booking/*'",
-    "test:fromFolderLogin:chrome": "npx cypress run --record --group BookingFilm --browser chrome --spec 'cypress/e2e/Login/*'",
-    "test:fromFolders:chrome": "run-p -c --aggregate-output test:fromFolderLogin:chrome test:fromFolderBooking:chrome"
+    "test:fromFolderLogin:chrome": "npx cypress run --record --group Login --browser chrome --spec 'cypress/e2e/Login/*'",
+    "test:fromFoldersParallel:chrome": "run-p -c --aggregate-output test:fromFolderLogin:chrome test:fromFolderBooking:chrome"
   },
   "eslintConfig": {
     "extends": "react-app"
